# shell-graph

./: Cargo.toml  shell.nix  test  test.shgraph  test2
src/: lib.rs  main.rs
