[package]
name = "shell-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
eframe = { version = "0.19.0" }
egui = { version = "0.25.0", features = ["persistence"] }
egui_node_graph = { version = "0.4.0", features = ["persistence"] }
nix = { version = "0.27.1", features = ["fs"] }
nonblock = "0.2.0"
rfd = { version = "0.13.0", features = ["ashpd", "xdg-portal", "tokio"], default-features = false }
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.30"
tokio = { version = "1.35.1", features = ["full"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
